pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/heterogeneous-vector-bad-ann.rkt
#;
(exn-pred 2)
#lang typed/racket

(ann (vector (ann 1 Symbol)) (Vector Number Symbol))
